language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_record_field_ignored_by_pattern_spread.snap
---
source: language-server/src/tests/rename.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub fn main(w: Wibble) {\n  case w {\n    Wibble(wibble: a, ..) -> a\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wobble: Int)
                      ↑▔▔▔▔▔      
}

pub fn main(w: Wibble) {
  case w {
    Wibble(wibble: a, ..) -> a
  }
}


----- AFTER RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wabble: Int)
}

pub fn main(w: Wibble) {
  case w {
    Wibble(wibble: a, ..) -> a
  }
}
