language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_record_field_ignored_by_record_update_spread.snap
---
source: language-server/src/tests/rename.rs
assertion_line: 2791
expression: "\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub fn main(w: Wibble) {\n  Wibble(..w, wibble: 2)\n}\n"
---
----- BEFORE RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wobble: Int)
                      ↑▔▔▔▔▔      
}

pub fn main(w: Wibble) {
  Wibble(..w, wibble: 2)
}


----- AFTER RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wabble: Int)
}

pub fn main(w: Wibble) {
  Wibble(..w, wibble: 2)
}
