language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_record_field_renames_labelled_arguments_of_call_with_incorrect_arity.snap
---
source: language-server/src/tests/rename.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub fn main() {\n  Wibble(wibble: 1)\n}\n"
---
----- BEFORE RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wobble: Int)
         ↑▔▔▔▔▔                   
}

pub fn main() {
  Wibble(wibble: 1)
}


----- AFTER RENAME
-- app.gleam

type Wibble {
  Wibble(wabble: Int, wobble: Int)
}

pub fn main() {
  Wibble(wabble: 1)
}
